--- a/src/app/home/components/home-header/home-header.component.html
+++ b/src/app/home/components/home-header/home-header.component.html
@@ -1,5 +1,8 @@
 <mat-card appearance="raised">
     <mat-card-content>
         {{ dato }}
+        <h1>
+            {{inputNumero}}
+        </h1>
     </mat-card-content>
   </mat-card>
