--- a/src/app/home/components/home-body/home-body.component.html
+++ b/src/app/home/components/home-body/home-body.component.html
@@ -13,8 +13,9 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+      <button mat-button (click)="changeNumber(true)">+</button>
+      <button mat-button (click)="changeNumber(false)">-</button>
+      <button mat-button (click)="goUsers()">Usuario</button>
     </mat-card-actions>
   </mat-card>
   
