--- a/src/app/home/components/home-header/home-header.component.html
+++ b/src/app/home/components/home-header/home-header.component.html
@@ -2,7 +2,7 @@
     <mat-card-content>
         {{ dato }}
         <h1>
-            {{inputNumero}}
+            {{miNumero}}
         </h1>
     </mat-card-content>
   </mat-card>
