--- a/src/app/user/pages/user/user.component.html
+++ b/src/app/user/pages/user/user.component.html
@@ -1,11 +1,45 @@
-@for (item of this.data; track $index) {
-  <mat-card appearance="raised">
-    <mat-card-header>
-      <mat-card-title>{{ item.name }}</mat-card-title>
-      <mat-card-subtitle>{{item.id}}</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad eos iste, laborum excepturi officiis maiores alias hic adipisci, ut architecto animi ipsam eaque ea quibusdam voluptates. Ea distinctio esse quidem sunt, iste praesentium sed libero commodi unde doloremque sit atque nemo quis ipsa! Nisi officiis corrupti in, numquam ut blanditiis eius ipsam veniam. Perferendis libero quae ipsa autem unde nostrum pariatur deleniti possimus totam commodi consectetur minima provident, natus debitis voluptate dicta sunt placeat explicabo ducimus cupiditate nam. A tenetur quas consectetur doloremque odit atque placeat hic suscipit, iusto, eius enim odio impedit ipsam quia cupiditate fugit repellendus quisquam accusantium.
-    </mat-card-content>
-  </mat-card>
-}
+<div class="container-user">
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      </ng-container>
+
+      <!-- Color Column -->
+      <ng-container matColumnDef="color">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
+        <td mat-cell *matCellDef="let row"> {{row.data?.color || 'N/A'}} </td>
+      </ng-container>
+
+      <!-- Capacity Column -->
+      <ng-container matColumnDef="capacity">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity </th>
+        <td mat-cell *matCellDef="let row"> {{row.data?.Capacity || 'N/A'}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
+</div>
